# Multi-Variant-Simulated-Traffic-Dataset-Creator-and-Model-Tester

./: .gitignore  EDGE_MATCHING_LOGIC.md  EXECUTABLE_SUMO_HOME.md  HOW_TO_USE_OSMWEBWIZARD.md  INSTALLER_SUMO_INTEGRATION.md  INSTALL_LOCAL_LLM.md  INSTALL_QT_DEPS.md  JUNCTION_SHAPE_FIX.md  MAP_TILES_AND_NETWORK_ALIGNMENT.md  NETWORK_DISPLAY_FIX.md  NETWORK_UPDATE_2025-12-21.md  OSMWEBWIZARD_COMPLETE_NETWORK_GUIDE.md  PORTO_ROUTE_CONVERSION_PLAN.md  PROGRESS_REPORT.md  PROJECT_DESIGN.md  README.md  ROAD_JUNCTION_ASSIGNMENT_LOGIC.md  ROUTE_SIMILARITY_SCORING_OPTIONS.md  STEP1_ANALYSIS_README.md  SUMO_ROUTE_CALCULATION_LOGIC.md  analyze_step1_routes.py  freeze.txt  pyproject.toml  requirements-dev.txt  requirements.txt
.cursor/: traj_4.json
2025-12-16-10-38-06/: osm.netccfg
2025-12-16-10-43-22/: osm.netccfg
Academia/: Makefile  compile.sh  nids2026_article.tex  sample_article.tex
Porto/: GET_PORTO_NETWORK.md  IMPROVED_NETWORK_GUIDE.md
docs/: SNAPSHOT_AGGREGATION_PROPOSAL.md  STATUS_DONE_AND_LEFT.md  TODO_USER_DEFINED.md
examples/: projects_registry.json  route_graph_20260116_120307.json  simulation.config.json  step_000000.json
projects/: projects_registry.json
scripts/: build_app_icon_square_rgba.py  build_executable.sh  convert_trajectories_fast.py  csv_to_steps.py  install_linux_desktop_entry.sh  package_portable_bundle.bat  package_portable_bundle.sh  paint_icon_margin_black.py  replace_map_background.py  run_gui.sh  view_network.py
src/: __init__.py  main.py
step1_analysis_results/: detailed_statistics.csv
tests/: test_basic_setup.py  (+2 more)
(+3112 files in other folders)
